# mcp-server

./: .bandit.yml  .gitignore  Makefile  README.md  docker-compose.yml  mcp_server.py  pyproject.toml
app/: fetch_data.py  main.py  models.py  prompts.py  server.py  session.py  settings.py  tools.py  utils.py
app/advanced/: logging_client.py  utils.py
app/agent/: models.py  prompts.py  server.py  session.py  tools.py
app/http_tools/: fetch_data.py  http_client.py
app/mcp_server/: server.py
app/routes/: agent_routes.py  data_routes.py  utility_routes.py
app/services/: fetch_data.py  http_client.py
app/storage/: tarantool.py
tarantool/: init.lua
