[project]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Korch",email = "crazyivan1289@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.75,<0.4.0)",
    "langchain-mcp-adapters (>=0.1.9,<0.2.0)",
    "langchain-ollama (>=0.3.7,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langgraph-checkpoint (>=2.1.1,<3.0.0)",
    "langgraph-prebuilt (>=0.6.4,<0.7.0)",
    "langgraph-sdk (>=0.2.3,<0.3.0)",
    "langsmith (>=0.4.20,<0.5.0)",
    "mcp (>=1.13.1,<2.0.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "fastapi (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
