[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = ["Ivan Korch <crazyivan1289@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = ">=0.3.27,<0.4.0"
langchain-core = ">=0.3.75,<0.4.0"
langchain-mcp-adapters = ">=0.1.9,<0.2.0"
langchain-ollama = ">=0.3.7,<0.4.0"
langgraph = ">=0.6.6,<0.7.0"
langgraph-checkpoint = ">=2.1.1,<3.0.0"
langgraph-prebuilt = ">=0.6.4,<0.7.0"
langgraph-sdk = ">=0.2.3,<0.3.0"
langsmith = ">=0.4.20,<0.5.0"
mcp = ">=1.13.1,<2.0.0"
ollama = ">=0.5.3,<0.6.0"
fastapi = ">=0.116.1,<0.117.0"
aiohttp = ">=3.12.15,<4.0.0"
isort = ">=6.0.1,<7.0.0"
langchain-community = ">=0.3.29,<0.4.0"
aiofiles = ">=24.1.0,<25.0.0"
python-dotenv = "^1.1.1"
langchain-gigachat = "^0.3.12"
tenacity = "^9.1.2"
httpx = "^0.28.1"
xmltodict = "^0.14.2"
tarantool = "^1.2.0"
fastmcp = "^2.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"