[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = ["Ivan Korch <crazyivan1289@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = ">=0.3.27,<0.4.0"
langchain-core = ">=0.3.75,<0.4.0"
langchain-mcp-adapters = ">=0.1.9,<0.2.0"
langchain-ollama = ">=0.3.7,<0.4.0"
langgraph = ">=0.6.6,<0.7.0"
langgraph-checkpoint = ">=2.1.1,<3.0.0"
langgraph-prebuilt = ">=0.6.4,<0.7.0"
langgraph-sdk = ">=0.2.3,<0.3.0"
langsmith = ">=0.4.20,<0.5.0"
mcp = ">=1.13.1,<2.0.0"
ollama = ">=0.5.3,<0.6.0"
fastapi = ">=0.116.1,<0.117.0"
langchain-community = ">=0.3.29,<0.4.0"
aiofiles = ">=24.1.0,<25.0.0"
python-dotenv = "^1.1.1"
langchain-gigachat = "^0.3.12"
tenacity = "^9.1.2"
httpx = {extras = ["http2"], version = "^0.28.1"}
xmltodict = "^0.14.2"
tarantool = "^1.2.0"
fastmcp = "^2.12.0"
uvicorn = "^0.35.0"
vulture = "^2.14"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pyright = "^1.1.404"
detect-secrets = "^1.5.0"
pylint = "^3.3.8"
pip-audit = "^2.9.0"
bandit = "^1.8.6"
deptry = "^0.23.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
ignore_names = [
    "x_api_key"
]
min_confidence = 70
exclude = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*"
]

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
pythonVersion = "3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "E",   # pycodestyle
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
quote-style = "double"